# lazydir

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
lazydir/: __init__.py  __main__.py  cli.py  group.py  reader.py  sorter.py  utils.py  writer.py
test/: test_extract.py  test_read.py  test_rename.py
